--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 
   <div class="card">
     <h1>Will you be my Valentine? 💕</h1>
+    <p>hey babe!</p>
     <p>You make my days brighter just by being you.</p>
 
     <button class="yes" onclick="yesClicked()">YES 💖</button>
