--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     body {
       margin: 0;
       height: 100vh;
-      background: linear-gradient(135deg, #ffd6e8c, #ff7eb3);
+      background: linear-gradient(135deg, #ffd6e8, #ff7eb3);
       display: flex;
       justify-content: center;
       align-items: center;
