--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       margin: 0;
       height: 100vh;
       background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+      box-shadow: 0 0 40px rgba(255,77,109,0.5);
       display: flex;
       justify-content: center;
       align-items: center;
