--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <div class="card">
     <h1>Will you be my Valentine? 💕</h1>
     <p>hey babe!</p>
-    <p>You make my days brighter just by being you.</p>
+    <p>You make my days brighter just by being you 🌸</p>
 
     <button class="yes" onclick="yesClicked()">YES 💖</button>
     <button class="no" onmouseover="moveNo()">NO 🙃</button>
@@ -79,7 +79,7 @@
   <script>
     function yesClicked() {
       document.body.innerHTML = `
-        <div style="text-align:center;color:white;">
+        <div style="text-align:center;color:blue;">
           <h1 style="font-size:3rem;">YAY!!! 💘🎉</h1>
           <p style="font-size:1.5rem;">You just made me the happiest person ❤️</p>
         </div>
