--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     function yesClicked() {
       document.body.innerHTML = `
         <div style="text-align:center;color:blue;">
-          <h1 style="font-size:3rem;">YAY!!! 💘🎉</h1>
+          <h1 style="font-size:3rem;">YAY!!! 💘🌻🎉</h1>
           <p style="font-size:1.5rem;">You just made me the happiest person ❤️</p>
         </div>
       `;
