--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     body {
       margin: 0;
       height: 100vh;
-      background: linear-gradient(135deg, #ff9a9e, #fad0c4);
-      box-shadow: 0 0 40px rgba(255,77,109,0.5);
+      background: linear-gradient(135deg, #f6d365, #fda085);
       display: flex;
       justify-content: center;
       align-items: center;
@@ -17,18 +16,17 @@
     }
 
     .card {
-      background: white;
+      background: rgba(255, 255, 255, 0.95);
       padding: 40px;
       border-radius: 20px;
       text-align: center;
-      box-shadow: 0 15px 30px rgba(0,0,0,0.2);
+      box-shadow: 0 20px 40px rgba(0,0,0,0.15);
       animation: pop 1s ease;
     }
 
     h1 {
-      color: #ff4d6d;
-      font-size: 2.5rem;
-    }
+  color: #b85042;
+}
 
     p {
       font-size: 1.2rem;
