--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Be My Valentine 💖</title>
+  <title>Be My Valentine💖</title>
   <style>
     body {
       margin: 0;
       height: 100vh;
-      background: linear-gradient(135deg, #f6d365, #fda085);
+      linear-gradient(135deg, #000000, #ff4d6d);
       display: flex;
       justify-content: center;
       align-items: center;
