--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     body {
       margin: 0;
       height: 100vh;
-      linear-gradient(135deg, #000000, #ff4d6d);
+      linear-gradient(135deg, #ee9ca7, #ffdde1);
       display: flex;
       justify-content: center;
       align-items: center;
