--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     .card {
       background: rgba(255, 255, 255, 0.95);
       padding: 40px;
-      border-radius: 20px;
+      border-radius: 30px;
       text-align: center;
       box-shadow: 0 20px 40px rgba(0,0,0,0.15);
       animation: pop 1s ease;
@@ -53,9 +53,11 @@
     }
 
     .no {
-      background: #ddd;
-      position: absolute;
-    }
+  background: #f3ede7;
+  color: #7a5c55;
+  border: 1px solid #e0cfc3;
+  position: absolute;
+}
 
     @keyframes pop {
       from { transform: scale(0.8); opacity: 0; }
