--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       padding: 12px 25px;
       font-size: 1rem;
       border: none;
-      border-radius: 25px;
+      border-radius: 30px;
       cursor: pointer;
       margin: 15px;
       transition: 0.3s;
@@ -49,8 +49,9 @@
     }
 
     .yes:hover {
-      transform: scale(1.1);
-    }
+  transform: scale(1.08);
+  box-shadow: 0 15px 30px rgba(253, 160, 133, 0.6);
+}
 
     .no {
   background: #f3ede7;
